components/observability/loki/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  labels:
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
  annotations:
    gethomepage.dev/href: "https://loki.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/loki.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["loki.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: loki-gateway
          port: 80
